--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,5 +1,6 @@
 - @posts.each do |post|
 	= link_to (image_tag post.image.url(:small))
 	%h2= link_to post.title, post
+	%p.comment_count= pluralize(post.comments.count, "comment")
 
 = link_to "Add New Inspiration", new_post_path
