--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -3,6 +3,10 @@
 %p= @post.link
 %p= @post.description
 %p= @post.user.name
+%p= pluralize(@post.get_upvotes.count, "like")
+%p= pluralize(@post.get_downvotes.count, "dislike")
+= link_to "Like", like_post_path(@post), method: :get
+= link_to "Dislike", dislike_post_path(@post), method: :get
 
 #comment
 	%h2.comment_count= pluralize(@post.comments.count, "comment")
