--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,7 +1,34 @@
-- @posts.each do |post|
-	= link_to (image_tag post.image.url(:small))
-	%h2= link_to post.title, post
-	%p.comment_count= pluralize(post.comments.count, "comment")
-	%p= pluralize(post.get_upvotes.count, "like")
+- if user_signed_in?
+	%p#intro
+		Hello,
+		= succeed "." do
+			= current_user.name
+		%br/
+		%span
+			Share your inspiration and see what's inspiring others!
+- else
+	%p#intro
+		What inspires you?
+		%br/
+		%span
+			Share your inspiration and see what's inspiring others!
 
-= link_to "Add New Inspiration", new_post_path
+#posts
+	- @posts.each do |post|
+		.post
+			.post_image
+				= link_to (image_tag post.image.url(:small))
+			.post_content
+				.title
+					%h2= link_to post.title, post
+				.data.clearfix
+					%p.username
+						Shared by
+						= post.user.name
+					%p.buttons
+						%span
+							%i.fa.fa-comments-o
+							= pluralize(post.comments.count, "comment")
+						%span
+							%i.fa.fa-thumbs-o-up
+							= pluralize(post.get_upvotes.count, "like")
